--- a/SpringBoot-JPA-REST-Angular-Bootstrap/pom.xml
+++ b/SpringBoot-JPA-REST-Angular-Bootstrap/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.caremark.cmp.prototype</groupId>
-	<artifactId>demo</artifactId>
+	<artifactId>PersonService</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
 
@@ -74,12 +74,37 @@
 	</dependencies>
 
 	<build>
+		<finalName>PersonService</finalName>
+	
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
-		</plugins>
+
+			<plugin>
+				<groupId>org.apache.tomcat.maven</groupId>
+				<artifactId>tomcat7-maven-plugin</artifactId>
+				<version>2.2</version>
+				<configuration>
+					<server>Tomcat85Animal</server>
+					<url>http://localhost:8080/manager/text</url>
+				</configuration>
+			</plugin>
+<!-- 
+			<plugin>
+				<groupId>org.apache.tomcat.maven</groupId>
+				<artifactId>tomcat7-maven-plugin</artifactId>
+				<version>2.2</version>
+				<configuration>
+					<server>Tomcat85Rizzo</server>
+					<url>http://rizzo.muppets.dnsalias.org:8080/manager/text</url>
+				</configuration>
+			</plugin>
+-->
+			
+		</plugins>		
+
 	</build>
 
 
