--- a/SpringBoot-JPA-REST-Angular-Bootstrap/src/main/resources/application.properties
+++ b/SpringBoot-JPA-REST-Angular-Bootstrap/src/main/resources/application.properties
@@ -1,12 +1,23 @@
+# Hello PersonService
+welcome.message: Hello PersonService
+#server.port=8081
+server.contextPath=/PersonService
+
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/test01
+spring.datasource.url=jdbc:mysql://localhost:3306/test01?autoReconnect=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=Caremark1
+spring.datasource.initialize=true
+
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://rizzo.muppets.dnsalias.org:3306/test01
+#spring.datasource.username=test01
+#spring.datasource.password=test01
 #spring.datasource.initialize=true
 
-#spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-spring.jpa.database-platform=org.hibernate.dialect.MySQL57InnoDBDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL57InnoDBDialect
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 
 logging.level.org.springframework.web=INFO
